--- a/styles.css
+++ b/styles.css
@@ -50,19 +50,71 @@ body {
 }
 
 /* Главное меню */
-#menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-}
-
 #menu h1 {
     font-size: 3rem;
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
+button {
+    padding: 15px 25px;
+    font-size: 1.2rem;
+    background-color: #0088cc;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    background-color: #0077b3;
+}
+
+/* Анимации */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: scale(1);
+    }
+    to {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+}
+
+.animated {
+    animation-duration: 0.4s;
+    animation-fill-mode: forwards;
+}
+
+.fade-in {
+    animation-name: fadeIn;
+}
+
+.fade-out {
+    animation-name: fadeOut;
+}
+
+.hidden {
+    display: none; /* Элемент скрыт из DOM */
+    opacity: 0;
+    transform: scale(1); /* Сохраняем его в начальной позиции */
+    position: absolute; /* Устанавливаем точное позиционирование */
+}
+
 
 #start-btn {
     padding: 15px 25px;
@@ -106,27 +158,32 @@ body {
 
 #score {
     position: absolute;
-    top: 20px;
+    top: 10%;
     left: 20px;
 }
 
 #timer {
     position: absolute;
-    top: 20px;
-    right: 200px;
+    top: 10%;
+    right: 47%;
 }
 
 #total-bubbles {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
+    font-size: 50px;
     color: white;
 }
 
 .icon {
     width: 30px;
     height: 30px;
+}
+
+.icon-menu {
+    width: 60px;
+    height: 60px;
 }
 
 .bubble-icon {
@@ -145,14 +202,9 @@ body {
     height: 50px;
     background-size: cover;
     background-position: center;
-    cursor: pointer;
     animation: bubble-move 5s cubic-bezier(0.25, 0.8, 0.25, 1) infinite;
     border-radius: 50%; /* Для всех пузырей, включая обычные и бонусные */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Добавим тень для пузырей */
-}
-
-.bubble:hover {
-    opacity: 0.8;
+    box-shadow: 0 0 15px rgba(0, 200, 255, 1); /* Добавим тень для пузырей */
 }
 
 .bubble.normal {
@@ -160,7 +212,14 @@ body {
 }
 .bonus {
     background-image: url('images/bonus-bubble.png');
-    border: 3px solid gold;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    background-position: center;
+    animation: bubble-move 5s cubic-bezier(0.25, 0.8, 0.25, 1) infinite;
+    border-radius: 50%; /* Для всех пузырей, включая обычные и бонусные */
+    box-shadow: 0 0 15px rgba(255, 230, 0, 1); /* Добавим тень для пузырей */
     animation-duration: 4s;
 }
 
@@ -188,7 +247,7 @@ body {
 
 #pause-btn {
     position: absolute;
-    top: 20px;
+    top: 10%;
     right: 20px;
     background-color: #ff6600;
 }
@@ -199,9 +258,6 @@ body {
 
 #pause-screen {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     padding: 30px;
     border-radius: 15px;
@@ -216,9 +272,6 @@ body {
     text-align: center;
     color: white;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     z-index: 10;
 }
 
@@ -240,9 +293,6 @@ body {
 #referral-screen {
     text-align: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     padding: 30px;
     border-radius: 15px;
@@ -293,5 +343,41 @@ body {
     background-color: #0077b3;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #000;
+}
 
+p {
+  position: relative;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 2em;
+  letter-spacing: 4px;
+  overflow: hidden;
+  background: linear-gradient(90deg, #000, #fff, #000);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 3s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
+}
 
+@keyframes animate {
+  0% {
+    background-position: -500%;
+  }
+  100% {
+    background-position: 500%;
+  }
+}
+
+table { 
+    margin-left: auto;
+    margin-right: auto;
+}
