--- a/styles.css
+++ b/styles.css
@@ -56,21 +56,7 @@ body {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-button {
-    padding: 15px 25px;
-    font-size: 1.2rem;
-    background-color: #0088cc;
-    color: white;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-}
 
-button:hover {
-    background-color: #0077b3;
-}
 
 /* Анимации */
 @keyframes fadeIn {
@@ -150,7 +136,7 @@ button:hover {
     top: 0;
 }
 
-#score, #timer {
+#score {
     font-size: 1.5rem;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -162,11 +148,7 @@ button:hover {
     left: 20px;
 }
 
-#timer {
-    position: absolute;
-    top: 10%;
-    right: 47%;
-}
+
 
 #total-bubbles {
     display: flex;
@@ -179,6 +161,12 @@ button:hover {
 .icon {
     width: 30px;
     height: 30px;
+}
+
+.icon-time {
+    width: 30px;
+    height: 30px;
+	vertical-align: middle;
 }
 
 .icon-menu {
@@ -233,7 +221,7 @@ button:hover {
 }
 
 /* Пауза и конец игры */
-#pause-btn, #restart-btn, #back-to-menu-btn, #resume-btn, #exit-to-menu-btn {
+#restart-btn, #back-to-menu-btn, #resume-btn, #exit-to-menu-btn {
     padding: 12px 25px;
     font-size: 1.1rem;
     background-color: #ffcc00;
@@ -246,14 +234,19 @@ button:hover {
 }
 
 #pause-btn {
-    position: absolute;
+	width: 7%;
+	position: absolute;
     top: 10%;
     right: 20px;
-    background-color: #ff6600;
-}
-
-#pause-btn:hover {
-    background-color: #e55c00;
+    background-color: rgba(0, 0, 0, 0.5);
+	font-size: 1.5rem;
+	font-weight: bold;
+	line-height: 1.3;
+	color: white;
+	border: solid rgba(255, 191, 0, 0.7);
+    text-align: center;
+	border-radius: 20px;
+	
 }
 
 #pause-screen {
