--- a/styles.css
+++ b/styles.css
@@ -140,14 +140,13 @@ body {
     font-size: 1.5rem;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-#score {
-    position: absolute;
+	font-size: 2rem;
+	font-weight: bold;
+	line-height: 1.3;
+	position: absolute;
     top: 10%;
     left: 20px;
 }
-
 
 
 #total-bubbles {
@@ -173,6 +172,7 @@ body {
     width: 60px;
     height: 60px;
 	text-align: center;
+	
 }
 
 .bubble-icon {
@@ -191,10 +191,15 @@ body {
     height: 50px;
     background-size: cover;
     background-position: center;
-    animation: bubble-move 5s cubic-bezier(0.25, 0.8, 0.25, 1) infinite;
+	
+	animation: bubble-move 5s cubic-bezier(0.25, 0.8, 0.25, 1) infinite; 
     border-radius: 50%; /* Для всех пузырей, включая обычные и бонусные */
+	pointer-events: all;
+	background-color: rgba(0, 255, 255, 0.6);
+	
     /*box-shadow: 0 0 15px rgba(0, 200, 255, 1); /* Добавим тень для пузырей */
 }
+
 
 .bubble.normal {
     background-image: url('images/normal-bubble.png'); /* Путь к изображению обычного пузыря */
@@ -210,6 +215,13 @@ body {
     border-radius: 50%; /* Для всех пузырей, включая обычные и бонусные */
     /*box-shadow: 0 0 15px rgba(255, 230, 0, 1); /* Добавим тень для пузырей */
     animation-duration: 4s;
+}
+
+/* Анимация для пузыря при лопании */
+.bubble.pop {
+    transform: scale(1.5);    /* Увеличиваем пузырь */
+    opacity: 0;               /* Пропадает */
+    transition: transform 0.5s ease, opacity 0.5s ease; /* Анимация пропадания */
 }
 
 @keyframes bubble-move {
@@ -349,4 +361,41 @@ body {
 table { 
     margin-left: auto;
     margin-right: auto;
+	text-align: center;
+    vertical-align: middle;
+}
+	/* Экран загрузки */
+.loading-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+	background-image: url('images/loading-background.png');
+	background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Помещаем на передний план */
+    color: white;
+    font-size: 1.5rem;
+    font-family: Arial, sans-serif;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.loading-spinner {
+    border: 4px solid #f3f3f3; /* Светлый цвет фона */
+    border-top: 4px solid #3498db; /* Цвет анимации */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+/* Анимация для крутящегося индикатора */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
