--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,30 @@
 /* Основные стили */
+
+.tiny5-regular {
+  font-family: "Tiny5", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+
+.press-start-2p-regular {
+  font-family: "Press Start 2P", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+// <uniquifier>: Use a unique and descriptive class name
+// <400>: Use a value from 300 to 900
+
+
+.rubik-<uniquifier> {
+  font-family: "Rubik", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +32,7 @@
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Rubik', serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,22 +129,28 @@ body {
 
 
 #start-btn {
+	font-family: "Rubik", serif;
+	font-size: 1.5rem;
     padding: 15px 25px;
-    font-size: 1.2rem;
-    background-color: rgba(123, 0, 194, 1);
+    background-color: rgba(46, 46, 46, 1);
     color: white;
     border: none;
-    border-radius: 50px;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 #start-btn:hover {
-    background-color: rgba(76, 0, 120, 1);
+    background-color: rgba(33, 33, 33, 1);
 }
 
 #total-bubbles {
+    font-size: 1.2rem;
+    margin-top: 10px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+#total-blyp {
     font-size: 1.2rem;
     margin-top: 10px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -137,7 +169,8 @@ body {
 }
 
 #score {
-    font-size: 1.5rem;
+	font-family: "Press Start 2P", serif;
+    font-size: 1rem;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 	font-size: 2rem;
@@ -150,16 +183,26 @@ body {
 
 
 #total-bubbles {
+	font-family: "Press Start 2P", serif;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 50px;
+    font-size: 40px;
+    color: white;
+}
+
+#total-blyp {
+	font-family: "Press Start 2P", serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
     color: white;
 }
 
 .icon {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 }
 
 .icon-time {
@@ -176,12 +219,14 @@ body {
 }
 
 .bubble-icon {
-    width: 30px;  /* Размер пузыря */
-    height: 30px;  /* Высота пузыря */
-    margin-right: 10px;  /* Отступ между иконкой и числом */
+    width: 40px;  /* Размер пузыря */
+    height: 40px;  /* Высота пузыря */
+
 }
 
 #bubble-count {
+	font-family: "Press Start 2P", serif;
+	font-size: 1rem;
     font-weight: bold;  /* Чтобы число было жирным */
 }
 
@@ -235,12 +280,13 @@ body {
 
 /* Пауза и конец игры */
 #restart-btn, #back-to-menu-btn, #resume-btn, #exit-to-menu-btn {
+	font-family: "Rubik", serif;
+	font-size: 1.5rem;
     padding: 12px 25px;
-    font-size: 1.1rem;
-    background-color: rgba(123, 0, 194, 1);
+    background-color: rgba(46, 46, 46, 1);
     color: white;
     border: none;
-    border-radius: 50px;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
@@ -282,12 +328,16 @@ body {
 }
 
 #final-score, #best-score {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
+	font-family: "Rubik", serif;
+	font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
 
 #restart-btn:hover, #back-to-menu-btn:hover, #resume-btn:hover, #exit-to-menu-btn:hover {
-    background-color: rgba(76, 0, 120, 1);
+    background-color: rgba(33, 33, 33, 1);
 }
 
 @media (max-width: 600px) {
@@ -319,10 +369,11 @@ body {
 }
 
 #referral-screen button {
+	font-family: "Rubik", serif;
+	font-size: 1.5rem;
     margin-top: 10px;
     padding: 10px 20px;
-    font-size: 1.1rem;
-    background-color: rgba(123, 0, 194, 1);
+    background-color: rgba(46, 46, 46, 1);
     color: white;
     border: none;
     border-radius: 50px;
@@ -330,23 +381,24 @@ body {
 }
 
 #referral-screen button:hover {
-    background-color: rgba(76, 0, 120, 1);
+    background-color: rgba(33, 33, 33, 1);
 }
 
 #referral-btn {
+	font-family: "Rubik", serif;
+	font-size: 1.5rem;
     padding: 15px 25px;
-    font-size: 1.2rem;
-    background-color: rgba(123, 0, 194, 1);
+    background-color: rgba(46, 46, 46, 1);
     color: white;
     border: none;
-    border-radius: 50px;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 #referral-btn:hover {
-    background-color: rgba(76, 0, 120, 1);
+    background-color: rgba(33, 33, 33, 1);
 }
 
 @keyframes animate {
@@ -366,6 +418,7 @@ table {
 }
 	/* Экран загрузки */
 .loading-screen {
+	font-family: "Rubik", serif;
     position: absolute;
     top: 0;
     left: 0;
@@ -380,7 +433,6 @@ table {
     z-index: 1000; /* Помещаем на передний план */
     color: white;
     font-size: 1.5rem;
-    font-family: Arial, sans-serif;
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
 }
@@ -399,3 +451,10 @@ table {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.end-gif {
+    width: 100px;
+    height: 100px;
+	text-align: center;
+}
+
