--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,8 @@ body {
     margin-top: 10px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
+
+
 #total-blyp {
     font-size: 1.2rem;
     margin-top: 10px;
@@ -191,6 +193,15 @@ body {
     color: white;
 }
 
+#tickets {
+	font-family: "Press Start 2P", serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: white;
+}
+
 #total-blyp {
 	font-family: "Press Start 2P", serif;
     display: flex;
@@ -214,6 +225,13 @@ body {
 .icon-menu {
     width: 60px;
     height: 60px;
+	text-align: center;
+	
+}
+
+.icon-tickets-menu {
+    width: 40px;
+    height: 40px;
 	text-align: center;
 	
 }
@@ -458,3 +476,37 @@ table {
 	text-align: center;
 }
 
+/* Стили для кнопки с прогрессом */
+.progress-button {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    background-color: #4CAF50; /* Основной цвет кнопки */
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+/* Время на кнопке */
+.progress-button #ticket-timer {
+    position: absolute;
+    bottom: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 20px;
+}
+
+/* Линия прогресса */
+.progress-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #76c7c0; /* Цвет прогресса */
+    transition: width 1s linear;
+}
